fix overflow-nav

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -53,7 +53,8 @@
   }
  
   .footer-copyright {
-    padding:5px;
-    font-size:small;
+    padding:10px;
+    font-size:12px;
+    justify-content:flex-start;
   }
 }
