--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -1,131 +1,118 @@
 nav {
-  max-width:100vw;
-  display:flex;
-  flex-direction:row;
-  align-items:center;
-  justify-content:flex-end;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
   background-color: $orange;
   height: 6vh;
- 
 }
 
-nav ul{
-    
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-around;
-    height: 6vh;
-    border-radius: 5px;
-    z-index: 0;
-    width: 100vw;
-    }
-   nav ul li {
-  
-    text-align: center;
-    height: 3vh;
-    width: 4.5rem;
-    color:$black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-size:20px;
-    
- 
-    }
-   a {
-    text-decoration: none;
-    list-style: none;
-   }
-   #logo {
-     font-family: 'Palette Mosaic', cursive;
-     border: 1px solid ;
-     color:$black;
-     border-radius:57% 43% 0% 100% / 54% 91% 9% 46% ;
-     width: 50px;
-     height: 50px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     display:none;
-    
-     
-   }
-   nav ul li:hover {
-     background-color:$lightO;
-     border-radius:10px;
-   }
-   .burger {
-    display: none;
-    
-  }
-  
-  .burger div {
-    width: 30px;
-    height: 3px;
-    background-color: black;
-    margin: 5px;
-    transition: all 0.3s ease;
-    
-  }
-   @media screen and (max-width: 992px) {
-    #logo{
-      width:8vw;
-      height:5vh;
-    }
-   }
-   @media screen and (max-width: 600px) {
-nav {
-  position: relative;
+nav ul {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 6vh;
+  border-radius: 5px;
+  z-index: 0;
+  width: 100vw;
+}
+nav ul li {
+  text-align: center;
+  height: 3vh;
+  width: 4.5rem;
+  color: $black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 20px;
+}
+a {
+  text-decoration: none;
+  list-style: none;
 }
 #logo {
-position:absolute;
-left:30px;
-top: 4px;
-display: flex;
+  font-family: "Palette Mosaic", cursive;
+  border: 1px solid;
+  color: $black;
+  border-radius: 57% 43% 0% 100% / 54% 91% 9% 46%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
 }
-nav ul  {
-  display:none;
-  z-index: 13;
-  position: absolute;
+nav ul li:hover {
+  background-color: $lightO;
+  border-radius: 10px;
+}
+.burger {
+  display: none;
+}
+
+.burger div {
+  width: 30px;
+  height: 3px;
+  background-color: black;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+@media screen and (max-width: 992px) {
+  #logo {
+    width: 8vw;
+    height: 5vh;
+  }
+}
+@media screen and (max-width: 600px) {
+  nav {
+    position: relative;
+    box-sizing: border-box;
+  }
+  #logo {
+    position: absolute;
+    left: 30px;
+    top: 4px;
+    display: flex;
+  }
+  nav ul {
+    display: flex;
+    z-index: 13;
+    position: absolute;
     top: 6vh;
     right: 0px;
     height: 84vh;
-    background:linear-gradient(to top,$lightO,orange);
+    background: linear-gradient(to top, $lightO, orange);
     flex-direction: column;
     align-items: center;
     width: 50%;
-    transform: translateX(100%);
-    transition: all 5s ease-in-out;
-
-
-}
-
-    .burger {
-      display: block;
-      padding-right: 20px;
-    
-      
-    }
-    .burger:hover div {
-      background-color: black;
-    }
-    .nav-active {
-      transform: translateX(0);
-    }
-   }
-   .toggle .line1 {
-    transform: rotate(-45deg) translate(-5px,6px);
-  }
-  .toggle .line2 {
+    transform: translateZ(100%);
+    transition: all 0.5s ease-in-out;
+    min-height: 0px;
     opacity: 0;
   }
-  .toggle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
+
+  .burger {
+    display: block;
+    padding-right: 20px;
+  }
+  .burger:hover div {
+    background-color: black;
   }
   .nav-active {
-    transform: translateX(0);
+    transform: translateZ(0);
     display: flex;
-    
+    opacity: 1;
   }
+}
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+  opacity: 0;
+}
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
