--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,14 +13,10 @@
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  
-  
-  
 }
 body {
     background-color: $white;
     height: 100vh;
-    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
